# Pipex

./: .here_doc.txt  CMakeLists.txt  Makefile  README.md  a.out  errors.h  pipex  pipex.h  pipex_bonus  pipex_bonus.h  script.sh  test.c
LIBFT/: Makefile  libft.h
LIBFT/srcs/: close_fds.c  ft_free.c  ft_free_tab.c  ft_isascii.c  ft_putstr_fd.c  ft_split.c  ft_strcmp.c  ft_strlen_tab.c
exec_bonus/: file1.txt  pipex
h_files/: errors.h  pipex.h
h_files_bonus/: errors.h  errors_bonus.h  pipex.h  pipex_bonus.h
pipex.dSYM/Contents/Resources/DWARF/: pipex
srcs/: childs.c  errors.c  file1  file1.txt  file2  file2.txt  parsing.c  pipex.c  pipex_utils.c  pipex_utils2.c  savepipex.c  test  test.c
srcs_b/: childs_bonus.c  errors_bonus.c  file1.txt  parsing_bonus.c  pipex_bonus.c  pipex_utils2_bonus.c  pipex_utils_bonus.c  savepipex.c
