cmake_minimum_required(VERSION 3.24)
project(Pipex)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(LIBFT)
include_directories(objs)
include_directories(srcs)

add_executable(Pipex
        LIBFT/objs/ft_atoi.o
        LIBFT/objs/ft_bzero.o
        LIBFT/objs/ft_calloc.o
        LIBFT/objs/ft_convert_base.o
        LIBFT/objs/ft_convert_base2.o
        LIBFT/objs/ft_dec_to_hex.o
        LIBFT/objs/ft_free.o
        LIBFT/objs/ft_free_tab.o
        LIBFT/objs/ft_freetabi.o
        LIBFT/objs/ft_isalnum.o
        LIBFT/objs/ft_isalpha.o
        LIBFT/objs/ft_isascii.o
        LIBFT/objs/ft_isdigit.o
        LIBFT/objs/ft_isprint.o
        LIBFT/objs/ft_isspace.o
        LIBFT/objs/ft_itoa.o
        LIBFT/objs/ft_lstadd_back.o
        LIBFT/objs/ft_lstadd_front.o
        LIBFT/objs/ft_lstclear.o
        LIBFT/objs/ft_lstdelone.o
        LIBFT/objs/ft_lstiter.o
        LIBFT/objs/ft_lstlast.o
        LIBFT/objs/ft_lstmap.o
        LIBFT/objs/ft_lstnew.o
        LIBFT/objs/ft_lstsize.o
        LIBFT/objs/ft_memchr.o
        LIBFT/objs/ft_memcmp.o
        LIBFT/objs/ft_memcpy.o
        LIBFT/objs/ft_memmove.o
        LIBFT/objs/ft_memset.o
        LIBFT/objs/ft_print_cust.o
        LIBFT/objs/ft_printf.o
        LIBFT/objs/ft_putchar_fd.o
        LIBFT/objs/ft_putendl_fd.o
        LIBFT/objs/ft_putnbr_fd.o
        LIBFT/objs/ft_putstr_fd.o
        LIBFT/objs/ft_split.o
        LIBFT/objs/ft_strchr.o
        LIBFT/objs/ft_strdup.o
        LIBFT/objs/ft_striteri.o
        LIBFT/objs/ft_strjoin.o
        LIBFT/objs/ft_strlcat.o
        LIBFT/objs/ft_strlcpy.o
        LIBFT/objs/ft_strlen.o
        LIBFT/objs/ft_strmapi.o
        LIBFT/objs/ft_strncmp.o
        LIBFT/objs/ft_strnstr.o
        LIBFT/objs/ft_strrchr.o
        LIBFT/objs/ft_strtrim.o
        LIBFT/objs/ft_substr.o
        LIBFT/objs/ft_tolower.o
        LIBFT/objs/ft_toupper.o
        LIBFT/objs/ft_udec_to_hex.o
        LIBFT/objs/get_next_line.o
        LIBFT/objs/get_next_line_utils.o
        LIBFT/srcs/ft_atoi.c
        LIBFT/srcs/ft_atoi_base.c
        LIBFT/srcs/ft_bzero.c
        LIBFT/srcs/ft_calloc.c
        LIBFT/srcs/ft_convert_base.c
        LIBFT/srcs/ft_convert_base2.c
        LIBFT/srcs/ft_dec_to_hex.c
        LIBFT/srcs/ft_free.c
        LIBFT/srcs/ft_free_tab.c
        LIBFT/srcs/ft_freetabi.c
        LIBFT/srcs/ft_isalnum.c
        LIBFT/srcs/ft_isalpha.c
        LIBFT/srcs/ft_isascii.c
        LIBFT/srcs/ft_isdigit.c
        LIBFT/srcs/ft_isprint.c
        LIBFT/srcs/ft_isspace.c
        LIBFT/srcs/ft_itoa.c
        LIBFT/srcs/ft_lstadd_back.c
        LIBFT/srcs/ft_lstadd_front.c
        LIBFT/srcs/ft_lstclear.c
        LIBFT/srcs/ft_lstdelone.c
        LIBFT/srcs/ft_lstiter.c
        LIBFT/srcs/ft_lstlast.c
        LIBFT/srcs/ft_lstmap.c
        LIBFT/srcs/ft_lstnew.c
        LIBFT/srcs/ft_lstsize.c
        LIBFT/srcs/ft_memchr.c
        LIBFT/srcs/ft_memcmp.c
        LIBFT/srcs/ft_memcpy.c
        LIBFT/srcs/ft_memmove.c
        LIBFT/srcs/ft_memset.c
        LIBFT/srcs/ft_print_cust.c
        LIBFT/srcs/ft_printf.c
        LIBFT/srcs/ft_putchar_fd.c
        LIBFT/srcs/ft_putendl_fd.c
        LIBFT/srcs/ft_putnbr_fd.c
        LIBFT/srcs/ft_putstr_fd.c
        LIBFT/srcs/ft_split.c
        LIBFT/srcs/ft_strchr.c
        LIBFT/srcs/ft_strdup.c
        LIBFT/srcs/ft_striteri.c
        LIBFT/srcs/ft_strjoin.c
        LIBFT/srcs/ft_strlcat.c
        LIBFT/srcs/ft_strlcpy.c
        LIBFT/srcs/ft_strlen.c
        LIBFT/srcs/ft_strmapi.c
        LIBFT/srcs/ft_strncmp.c
        LIBFT/srcs/ft_strnstr.c
        LIBFT/srcs/ft_strrchr.c
        LIBFT/srcs/ft_strtrim.c
        LIBFT/srcs/ft_substr.c
        LIBFT/srcs/ft_tolower.c
        LIBFT/srcs/ft_toupper.c
        LIBFT/srcs/ft_udec_to_hex.c
        LIBFT/srcs/get_next_line.c
        LIBFT/srcs/get_next_line_utils.c
        LIBFT/libft.h
        LIBFT/Makefile
        objs/test.o
        srcs/test.c
        Makefile
        pipex.h)
